# atomc-compiler

./: .gitignore  CMakeLists.txt  README.md  cmake.sh  lexical_analyzer.cpp  lexical_analyzer.hpp  log.cpp  log.hpp  main.cpp  regexes.txt  run.sh  syntactic_analyzer.cpp  syntactic_analyzer.hpp  token.hpp  tokens.hpp
doc/: atomc(10).drawio
result/: 0.txt  1.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
tests/: 0.c  1.c  2.c  3.c  4.c  5.c  6.c  7.c  8.c  9.c
